--- a/index3.html
+++ b/index3.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LaunchPadsetup</title>
-    <script src = "./anime.js"></script>
-    
+    <script src= "./app.js" async></script>
+    <title>Project 3</title>
 </head>
 <body>
-    <h1 id= "testelm" > This is the assignment. ></h1>
     
 </body>
 </html>
